# rust-api-server

./: Cargo.toml
src/: main.rs
src/config/: db_connection.rs
src/models/: data_model.rs
src/routes/: data_routes.rs  mod.rs
