[package]
name = "rust-api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
env_logger = "0.8"
log = "^0.4"
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] }
tokio = "1"
chrono = "0.4"
serde = "1"
strum_macros = "^0.24"
strum = {version = "^0.24", features = ["derive"]}
derive_more = "^0.99"
actix-cors = "0.6.2"
dotenv = "0.15.0"
futures-util = "0.3.24"
futures = "0.3.24"
